# Recreational-Programming

./: README.md
Clearf/: README.md  clear.c  clear.h  clearf  run.sh
KeyWatcher/: README.md  key.c  keys  keys.h  run.sh
Locksmith/: LockSmith.c  LockSmith.h  README.md  a.out  run.sh
Neurons/: Makefile  README.md  gates  gates.c  times2  times2.c
Note-Cli/: Note-Cli  Note-Cli.c  Note-Cli.h  README.md  obsfusc.h  run.sh
ObfusKey/: D-ObfusKey  D-ObfusKey.c  ObfusKey  ObfusKey.c  README.md  make.sh  obsfusc_cwd.h
Pomodoro/: Cargo.toml  README.md
Pomodoro/src/: main.rs  stages.rs
Sniffer/: README.md
Sniffer/src/: lib.rs  main.rs  matcher.rs
TapRec/: Cargo.toml  README.md
TapRec/src/: main.rs
cry-rs/: Cargo.toml  README.md
cry-rs/src/: client.rs  crypt.rs  data.rs  keygen.rs  lang.rs  main.rs  main_cli.rs  main_server.rs  matrixopts.rs  modmatrix.rs  server.rs
