[package]
name = "cry-rs"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 3
debug = false
split-debuginfo = 'packed'
panic = 'abort'
lto = true
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'packed'
panic = 'abort'
lto = true
codegen-units = 1
incremental = false

[dependencies]
byteorder = "1.5.0"
ctrlc = "3.4.5"
local-ip-address = "0.6.3"
pnet = "0.35.0"
