[package]
name = "cry-rs"
version = "0.0.2"
edition = "2021"
readme = "README.md"
repository = "https://lvzrr/Recreational-Programming"
license = "MIT"


[[bin]]
name = "cry_serv"
path = "src/main_server.rs"

[[bin]]
name = "cry_cli"
path = "src/main_cli.rs"

[profile.dev]
opt-level = 3
debug = false
split-debuginfo = 'packed'
panic = 'abort'
lto = true
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'packed'
panic = 'abort'
lto = true
codegen-units = 1
incremental = false

[dependencies]
byteorder = "1.5.0"
crossterm = "0.28.1"
ctrlc = "3.4.5"
local-ip-address = "0.6.3"
pnet = "0.35.0"
ratatui = "0.29.0"
