[package]
name = "cry-rs"
version = "0.0.2"
edition = "2021"
readme = "README.md"
repository = "https://lvzrr/Recreational-Programming"
license = "MIT"


[[bin]]
name = "cry_serv"
path = "src/main_server.rs"

[[bin]]
name = "cry_cli"
path = "src/main_cli.rs"

[profile.dev]
opt-level = 3
debug = false
strip = "none"
lto = true
incremental = false
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
byteorder = "1.5.0"
crossterm = "0.28.1"
ctrlc = "3.4.5"
local-ip-address = "0.6.3"
pnet = "0.35.0"
ratatui = "0.29.0"
